--- a/index.html
+++ b/index.html
@@ -25,11 +25,38 @@
 <body class="is-preload">
 <div id="particles-js"></div>
 
+<div class="sidebar">
+    <div class="dot" id="title-dot">
+        <li><span class="dot-text">Title</span></li>
+    </div>
+    <div class="dot" id="about-dot">
+        <li><span class="dot-text">About Me</span></li>
+    </div>
+    <div class="dot" id="projects-dot">
+        <li><span class="dot-text">Projects</span></li>
+    </div>
+    <div class="dot" id="blogs-dot">
+        <li><span class="dot-text">Blogs</span></li>
+    </div>
+    <div class="dot" id="contact-dot">
+        <li><span class="dot-text">Contacts</span></li>
+    </div>
+</div>
+
 <!-- Page Wrapper -->
 <div id="page-wrapper">
     <!-- Banner -->
     <section id="banner">
         <div class="inner">
+            <div class="logo">
+                <a target="_blank" style="border-bottom: none;"
+                   href="https://www.linkedin.com/in/malcolm-johnson-a86781196"><span
+                        class="icon brands fa-linkedin"
+                        style="text-decoration: none; cursor: pointer;"></span></a>
+                <a target="_blank" style="border-bottom: none;"
+                   href="https://github.com/GalacticWafer"><span class="icon brands fa-github"
+                                                                 style="text-decoration: none; cursor: pointer;"></span></a>
+            </div>
             <h2>Galactic Keyboards</h2>
             <p>Gesture Keyboard</p>
         </div>
