--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     </noscript>
 </head>
 <body class="is-preload"><!DOCTYPE HTML>
-
 <html>
 <head>
     <title></title>
@@ -22,7 +21,6 @@
 </head>
 <body class="is-preload">
 <div id="particles-js"></div>
-
 
 
 <!-- Page Wrapper -->
@@ -44,30 +42,18 @@
                     <h2 class="major" style="text-align: left;" id="about">Privacy Policy</h2>
                     <p style="text-align: left;">
                         <br/>
-                        Galactic Keyboards built the Gesture Board app as a one-time purchase and is
+                        Galactic Keyboards builds software keyboards for as a one-time purchase and is
                         intended for use as is.
                         This page is used to inform visitors regarding our policies with the
                         collection, use, and disclosure of Personal Information if anyone decided to
                         use our Service.
                         <br/>
-                        If you choose to use our Service, then you agree to the collection and use
-                        of information in relation to this policy. We will not use or share your
-                        information with anyone except as described in this Privacy Policy.
-                        <br/>
                         <br/>
                         Information Collection and Use
                         <br/>
+                        <br/>
                         The app does not use any third-party services that may collect information
                         used to identify you.
-                        <br/>
-                        Log Data
-                        We want to inform you that whenever you use our Service, in a case of an
-                        error in the app we collect data and information (through third party
-                        products) on your phone called Log Data. This Log Data may include
-                        information such as your device Internet Protocol (“IP”) address, device
-                        name, operating system version, the configuration of the app when utilizing
-                        our Service, the time and date of your use of the Service, and other
-                        statistics.
                         <br/>
                 </div>
             </div>
