--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
                     <h2 class="major" style="text-align: left;" id="about">Privacy Policy</h2>
                     <p style="text-align: left;">
                         <br/>
-                        Galactic Keyboards builds software keyboards for as a one-time purchase and is
-                        intended for use as is.
+                        Galactic Keyboards builds software keyboards for purchase and all products
+                        are intended for use as is.
                         This page is used to inform visitors regarding our policies with the
                         collection, use, and disclosure of Personal Information if anyone decided to
                         use our Service.
                         <br/>
                         <br/>
+                        <br/>
                         Information Collection and Use
                         <br/>
                         <br/>
-                        The app does not use any third-party services that may collect information
+                        The app does NOT use any third-party services that may collect information
                         used to identify you.
                         <br/>
                 </div>
