--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                         Information Collection and Use
                         <br/>
                         <br/>
+                        The app does NOT collect any personal information, log any keystrokes, or
+                        save any data beyond clipboard entries for pasting (this data is erased when
+                        the app stops running).
+                        <br/>
                         The app does NOT use any third-party services that may collect information
                         used to identify you.
                         <br/>
