--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <!-- Banner -->
     <section id="banner">
         <div class="inner">
-            <h2>Galactic Keyboards</h2>
-            <p>Gesture Keyboard</p>
+            <h2>Galacticware Keyboards</h2>
+            <p>Mechanical and Software Keyboard Design</p>
         </div>
     </section>
 
@@ -42,7 +42,7 @@
                     <h2 class="major" style="text-align: left;" id="about">Privacy Policy</h2>
                     <p style="text-align: left;">
                         <br/>
-                        Galactic Keyboards builds software keyboards for purchase and all products
+                        Galacticware Keyboards builds software keyboards for purchase and all products
                         are intended for use as is.
                         This page is used to inform visitors regarding our policies with the
                         collection, use, and disclosure of Personal Information if anyone decided to
