--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
                         use our Service.
                         <br/>
                         <br/>
-                        <br/>
                         Information Collection and Use
                         <br/>
                         <br/>
                         The app does NOT collect any personal information, log any keystrokes, or
-                        save any data beyond clipboard entries for pasting (this data is erased when
-                        the app stops running).
+                        save any data beyond to remote locations, or use data beyond the baunds 
+                        of the application itself. Local data is store for clipboard entries are
+                        not saved (this data is erased when the app stops running). Macros are
+                        saved to a local, in-app database. This app does not use internet access.
                         <br/>
                         The app does NOT use any third-party services that may collect information
                         used to identify you.
