--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Banner -->
     <section id="banner">
         <div class="inner">
-            <h2>Galacticware Keyboards</h2>
+            <h2>Galacticware Keyboards - Griddle Touch Screen Keyboard</h2>
             <p>Mechanical and Software Keyboard Design</p>
         </div>
     </section>
@@ -42,23 +42,20 @@
                     <h2 class="major" style="text-align: left;" id="about">Privacy Policy</h2>
                     <p style="text-align: left;">
                         <br/>
-                        Galacticware Keyboards builds software keyboards for purchase and all products
-                        are intended for use as is.
-                        This page is used to inform visitors regarding our policies with the
-                        collection, use, and disclosure of Personal Information if anyone decided to
-                        use our Service.
-                        <br/>
+                        Galacticware Keyboards builds the Griddle Touch Screen Keyboard application, which is
+                        intended for use as is. This page is used to inform visitors regarding
+                        our policie with the collection, use, and disclosure of Personal
+                        Information if anyone decided to use our Service.
                         <br/>
                         Information Collection and Use
                         <br/>
                         <br/>
-                        The app does NOT collect any personal information, log any keystrokes, or
-                        save any data beyond to remote locations, or use data beyond the baunds 
-                        of the application itself. Local data is store for clipboard entries are
-                        not saved (this data is erased when the app stops running). Macros are
-                        saved to a local, in-app database. This app does not use internet access.
+                        Any software distributed by GalacticwareKeyboards or an affiliate will ask
+                        permission for optional features that help save and share their keyboard layouts
+                        across multiple user devices. Local data such as text replacements and 
+                        multi-clipboard entries are stored in the form of SQLite databases.
                         <br/>
-                        The app does NOT use any third-party services that may collect information
+                        Griddle does not use any third-party services that may collect information
                         used to identify you.
                         <br/>
                 </div>
