--- a/index.html
+++ b/index.html
@@ -1,67 +1,79 @@
 <!DOCTYPE HTML>
-
 <html>
 <head>
-    <title></title>
+    <title>Privacy Policy - Galacticware Keyboards</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
-    <noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css"/>
-    </noscript>
 </head>
-<body class="is-preload"><!DOCTYPE HTML>
-<html>
-<head>
-    <title></title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <link rel="stylesheet" href="assets/css/main.css"/>
 
-</head>
 <body class="is-preload">
-<div id="particles-js"></div>
 
-
-<!-- Page Wrapper -->
 <div id="page-wrapper">
     <!-- Banner -->
     <section id="banner">
         <div class="inner">
-            <h2>Galacticware Keyboards - Griddle Touch Screen Keyboard</h2>
+            <h2>Galacticware Keyboards — Griddle Touch Screen Keyboard</h2>
             <p>Mechanical and Software Keyboard Design</p>
         </div>
     </section>
 
-    <!-- Wrapper -->
+    <!-- Content -->
     <section id="wrapper">
-        <!-- one -->
         <section id="one" class="wrapper alt spotlight style2">
             <div class="inner2">
                 <div class="content">
                     <h2 class="major" style="text-align: left;" id="about">Privacy Policy</h2>
+
                     <p style="text-align: left;">
-                        <br/>
-                        Galacticware Keyboards builds the Griddle Touch Screen Keyboard application, which is
-                        intended for use as is. This page is used to inform visitors regarding
-                        our policie with the collection, use, and disclosure of Personal
-                        Information if anyone decided to use our Service.
-                        <br/>
-                        Information Collection and Use
-                        <br/>
-                        <br/>
-                        Any software distributed by GalacticwareKeyboards or an affiliate will ask
-                        permission for optional features that help save and share their keyboard layouts
-                        across multiple user devices. Local data such as text replacements and 
-                        multi-clipboard entries are stored in the form of SQLite databases.
-                        <br/>
-                        Griddle does not use any third-party services that may collect information
-                        used to identify you.
-                        <br/>
+
+                        Galacticware Keyboards ("we", "us", or "our") builds the Griddle Touch Screen Keyboard
+                        application ("the App"). This page informs users of our policies regarding the collection,
+                        use, and disclosure of personal information for anyone choosing to use our App.
+
+                        <br><br>
+                        <strong>Information Collection and Use</strong><br>
+                        The App does <strong>not</strong> collect, store, or transmit any personal information
+                        typed using the keyboard. Your keystrokes, passwords, messages, and sensitive data never leave
+                        your device.
+
+                        <br><br>
+                        The App may request optional permissions to enable features such as:
+                        <ul>
+                            <li>Saving custom keyboard layouts across your devices</li>
+                            <li>Synchronizing settings (if enabled by you)</li>
+                        </ul>
+
+                        Local user data—such as text replacements and multi-clipboard entries—is stored only on your
+                        device using local SQLite databases. This information is never uploaded or shared.
+
+                        <br><br>
+                        <strong>Third-Party Services</strong><br>
+                        The App does not use any external analytics providers, advertising networks, or third-party
+                        services that collect identifiable information.
+
+                        <br><br>
+                        <strong>Security</strong><br>
+                        We value your trust. While no system is perfectly secure, the App is designed to operate
+                        entirely offline with no data transmission, significantly reducing risk.
+
+                        <br><br>
+                        <strong>Changes to This Policy</strong><br>
+                        We may update this Privacy Policy from time to time. Any changes will be posted on this page.
+
+                        <br><br>
+                        <strong>Contact Us</strong><br>
+                        If you have any questions or suggestions about our Privacy Policy, feel free to contact us:
+                        <br>
+                        <em>galactic.keyboards@gmail.com</em>
+                    </p>
+
                 </div>
             </div>
         </section>
     </section>
+
+    <!-- Footer -->
     <section id="footer">
         <div class="inner">
             <h2 class="major" id="contact">Get in touch</h2>
@@ -70,7 +82,6 @@
             </ul>
         </div>
     </section>
-
 </div>
 
 <!-- Scripts -->
@@ -83,4 +94,6 @@
 <script src="assets/js/sidebar.js"></script>
 <script src="particles.js"></script>
 <script src="assets/js/app.js"></script>
+
 </body>
+</html>
